@@ -1,3 +1,8 @@
+2002-09-19  Dom Lachowicz <doml@appligent.com>
+
+	* rscg.c (rsvg_start_ellipse): Ellipses work ok
+	(rsvg_start_tspan): Start of tspan work. Needs to handle x offset
+	
 2002-09-18  Dom Lachowicz <doml@appligent.com>
 
 	* rsvg-css.c (rsvg_color_parse) : use bsearch instead of GHashTable. Potentially faster, 
